--- a/index.html
+++ b/index.html
@@ -100,57 +100,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <img src="images/plus.png" class="addform" onclick="clone()">
-                    <div id="originalForm" class="input-row form">
-                        <label class="paddingleft">
-                            <select name="day" class="dayForm">
-                                <option> </option>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                                <option>6</option>
-                                <option>7</option>
-                                <option>8</option>
-                                <option>9</option>
-                                <option>10</option>
-                                <option>11</option>
-                                <option>12</option>
-                                <option>13</option>
-                                <option>14</option>
-                                <option>15</option>
-                                <option>16</option>
-                                <option>17</option>
-                                <option>18</option>
-                                <option>19</option>
-                                <option>20</option>
-                                <option>21</option>
-                                <option>22</option>
-                                <option>23</option>
-                                <option>24</option>
-                                <option>25</option>
-                                <option>26</option>
-                                <option>27</option>
-                                <option>28</option>
-                                <option>29</option>
-                                <option>30</option>
-                                <option>31</option>
-                            </select>
-                        </label>
-                        <label class="paddingleft sizeForm">
-                            <select name="font">
-                                <option>mała</option>
-                                <option>średnia</option>
-                                <option>duża</option>
-                            </select>
-                        </label>
-                        <label class="paddingleft">
-                            <input type="color" name="favcolor" value="#000000">
-                        </label>
-
-                        <textarea class="form-control textarea" rows="2"></textarea>&nbsp;
-                    </div>
+                    <img src="images/plus.png" class="addform" onclick="addDayPlate()">
                       <div id="addedForm">
                     </div>
                 </div>
