finishing the manu by adding new opacity functions and anchoring the pictures

--- a/menu.html
+++ b/menu.html
@@ -75,8 +75,9 @@
 <div class="container">
   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <h2>'LEON KOT'</h2>
-    <div class="teaser2">
-    <div id="Carousel" class="carousel slide carousel-fade center-block" data-ride="carousel">
+      <a href="/kalendarz/index.php">
+        <div class="teaser2 firstCalendar">
+           <div id="Carousel" class="first_carousel carousel slide carousel-fade center-block" data-ride="carousel">
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner center-block " role="listbox">
                   <div class="item active">
@@ -125,19 +126,23 @@
                </a>
 
               </div>
-    <img src="images/leonkot.JPG" alt="..." class="center-block relativepic">
-    </div>
-  <div>
- </div>
-   <button type="button" onclick="window.location.href='/kalendarz/index.php'" class="teaser_button"> <p class="button_text"> WYBIERZ PROJEKT </p> </button>
+              <a class="link_wrap" href="/kalendarz/index.php">
+    <img src="images/leonkot.JPG" alt="..." class="center-block relativepic leon">
+              </a>
+            </div>
+          <div>
+        </div>
+    </a>
  </div>
 
    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    <div>
-      <h2>'OSIOŁ ROBERT'</h2>
-    </div>
-    <div class="teaser2">
-    <div id="Carousel2" class="carousel slide carousel-fade center-block" data-ride="carousel">
+    
+       <div>
+       <h2>'OSIOŁ ROBERT'</h2>
+         </div>
+         <a href="/kalendarz/index.php">
+            <div class="teaser2 secondCalendar">
+              <div id="Carousel2" class="second_carousel carousel slide carousel-fade center-block" data-ride="carousel">
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner center-block " role="listbox">
                   <div class="item active">
@@ -186,12 +191,14 @@
                </a>
 
               </div>
-    <img src="images/robertosiol.png" alt="..." class="center-block relativepic">
+          <a href="/kalendarz/index.php">
+            <img src="images/robertosiol.png" alt="..." class="center-block relativepic">
+          </a>
+        </div>
+       <div>
+     </div>
     </div>
-  <div>
- </div>
-   <button type="button" onclick="window.location.href='/kalendarz/index.php'" class="teaser_button"> <p class="button_text"> WYBIERZ PROJEKT </p> </button>
- </div>
+   </a>
 </div>
 
 <div id="bottom_menu">
