adding test loader and preview

--- a/menu.html
+++ b/menu.html
@@ -75,7 +75,7 @@
 <div class="container">
   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <h2>'LEON KOT'</h2>
-      <a href="/kalendarz/index.php">
+      <a href="/kalendarz/index.php?template=1">
         <div class="teaser2 firstCalendar">
            <div id="Carousel" class="first_carousel carousel slide carousel-fade center-block" data-ride="carousel">
                 <!-- Wrapper for slides -->
@@ -126,7 +126,7 @@
                </a>
 
               </div>
-              <a class="link_wrap" href="/kalendarz/index.php">
+              <a class="link_wrap" href="/kalendarz/index.php?template=1">
     <img src="images/leonkot.JPG" alt="..." class="center-block relativepic leon">
               </a>
             </div>
@@ -140,7 +140,7 @@
        <div>
        <h2>'OSIOŁ ROBERT'</h2>
          </div>
-         <a href="/kalendarz/index.php">
+         <a href="/kalendarz/index.php?template=2">
             <div class="teaser2 secondCalendar">
               <div id="Carousel2" class="second_carousel carousel slide carousel-fade center-block" data-ride="carousel">
                 <!-- Wrapper for slides -->
@@ -191,7 +191,7 @@
                </a>
 
               </div>
-          <a href="/kalendarz/index.php">
+          <a href="/kalendarz/index.php?template=2">
             <img src="images/robertosiol.png" alt="..." class="center-block relativepic">
           </a>
         </div>
