--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
   </div>
   <div class="col-lg-12 col-md-12 col-sm-12">
     <p>
-      Aby ostatecznie złożyc zamówienie prosze wypełnic poniższy formularz i zaakceptować warunki korzystania z serwisu.
+      Aby ostatecznie zakończyć cały proces prosze wypełnic poniższy formularz i zaakceptować warunki korzystania z serwisu.
     </p>
   </div>
  </div>
@@ -74,38 +74,74 @@
 
 <form>
   <div class="container">
-    <div class="form-group">
-      <label for="inputName"><p>Imię:</p></label>
-      <input type="email" class="form-control" id="inputName" placeholder="Nazwisko">
+   <div class="col-lg-12 col-md-12 col-sm-12"> 
+      <div class="form-group">
+        <label for="inputName"><p>Imię:</p></label>
+        <input type="text" class="form-control" id="inputName" placeholder="Nazwisko">
+      </div>
     </div>
-    <div class="form-group">
-      <label for="inputSurname"><p>Nazwisko:</p></label>
-      <input type="email" class="form-control" id="inputSurname" placeholder="Nazwisko">
+    <div class="col-lg-12 col-md-12 col-sm-12"> 
+      <div class="form-group">
+        <label for="inputSurname"><p>Nazwisko:</p></label>
+        <input type="text" class="form-control" id="inputSurname" placeholder="Nazwisko">
+      </div>
     </div>
-    <div class="form-group">
-      <label for="inputEmail"><p>Email:</p></label>
-      <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
+    <div class="col-lg-12 col-md-12 col-sm-12"> 
+      <div class="form-group">
+        <label for="inputEmail"><p>Email:</p></label>
+        <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
+      </div>
     </div>
-    <div class="form-group">
-      <label for="inputPhoneNumber"><p>Numer telefonu:</p></label>
-      <input type="password" class="form-control" id="inputPhoneNumber" placeholder="Numer telefonu">
+    <div class="col-lg-12 col-md-12 col-sm-12"> 
+      <div class="form-group">
+        <label for="inputPhoneNumber"><p>Numer telefonu:</p></label>
+        <input type="text" class="form-control" id="inputPhoneNumber" placeholder="Numer telefonu">
+      </div>
     </div>
-    <div class="form-group">
-      <label for="inputPrice"><p>Opcja dostawy:</p></label>
-      <select class="form-control" id="inputPrice">
-        <option></option>
-        <option>Odbiór osobisty w siedzibie firmy -  0 zł</option>
-        <option>Przesyłka Pocztą Polską - 8 zł</option>
-     </select>
+     <div class="col-lg-6 col-md-6 col-sm-6">
+       <div class="form-group">
+        <label for="inputStreet"><p>Ulica:</p></label>
+        <input type="text" class="form-control" id="inputStreet" placeholder="Ulica">
+      </div>
     </div>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox"> <p>Przeczytałem i akceptuję <a href="terms.html">REGULAMIN</a> serwisu.</p>
-      </label>
+    <div class="col-lg-6 col-md-6 col-sm-6">
+       <div class="form-group">
+        <label for="inputLocal"><p>Numer mieszkania:</p></label>
+        <input type="text" class="form-control" id="inputLocal" placeholder="Numer posesji / numer lokalu">
+      </div>
     </div>
-    <button type="submit" class="btn btn-default">Prześlij</button>
+     <div class="col-lg-6 col-md-6 col-sm-6">
+       <div class="form-group">
+        <label for="inputCity"><p>Miasto:</p></label>
+        <input type="text" class="form-control" id="inputCity" placeholder="Miasto">
+      </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-6">
+       <div class="form-group">
+        <label for="inputLocal"><p>Kod pocztowy:</p></label>
+        <input type="text" class="form-control" id="inputLocal" placeholder="Kod pocztowy np: 63-900">
+      </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12"> 
+      <div class="form-group">
+        <label for="inputPrice"><p>Opcja dostawy:</p></label>
+        <select class="form-control" id="inputPrice">
+          <option></option>
+          <option>Odbiór osobisty w siedzibie firmy -  0 zł</option>
+          <option>Przesyłka Pocztą Polską - 8 zł</option>
+       </select>
+      </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12"> 
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" class="submit_checkbox"> <p>Przeczytałem i akceptuję <a class="red" href="terms.html">REGULAMIN</a> serwisu.</p>
+        </label>
+      </div>
+    <button type="submit" class="btn btn-default teaser_button"><p class="text-center">Prześlij</p></button>
   </div>
 </form>
+</div>
 <div id="bottom_menu">
   <div class="row">
     <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 ">
@@ -121,5 +157,6 @@
 <script type="text/javascript" src="jquery2.1.4.min.js"></script>
 <script type="text/javascript" src="jqueryrotate.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<SCRIPT TYPE="text/javascript" SRC="site.js"></SCRIPT>
+<script type="text/javascript" src="site.js"></script>
+<script type="text/javascript" src="validation.js"></script>
 </html>
