--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
-
+  
 <body>
     <div id="top_menu_index">
       <a name="top_Anchor" id="top_Anchor">
@@ -89,7 +89,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12"> 
       <div class="form-group">
         <label for="inputEmail"><p>Email:</p></label>
-        <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
+        <input type="email" class="form-control" id="inputEmail" placeholder="Email">
       </div>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12"> 
@@ -119,13 +119,13 @@
     <div class="col-lg-6 col-md-6 col-sm-6">
        <div class="form-group">
         <label for="inputLocal"><p>Kod pocztowy:</p></label>
-        <input type="text" class="form-control" id="inputLocal" placeholder="Kod pocztowy np: 63-900">
+        <input type="text" class="form-control" id="inputPostal" placeholder="Kod pocztowy np: 63-900">
       </div>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12"> 
       <div class="form-group">
         <label for="inputPrice"><p>Opcja dostawy:</p></label>
-        <select class="form-control" id="inputPrice">
+        <select class="form-control" id="inputShipping">
           <option></option>
           <option>Odbiór osobisty w siedzibie firmy -  0 zł</option>
           <option>Przesyłka Pocztą Polską - 8 zł</option>
@@ -138,7 +138,7 @@
           <input type="checkbox" class="submit_checkbox"> <p>Przeczytałem i akceptuję <a class="red" href="terms.html">REGULAMIN</a> serwisu.</p>
         </label>
       </div>
-    <button type="submit" class="btn btn-default teaser_button"><p class="text-center">Prześlij</p></button>
+    <button type="button" id="submit_form" onclick="submitFormNow()" class="btn btn-default teaser_button"><p class="text-center">Prześlij</p></button>
   </div>
 </form>
 </div>
@@ -157,6 +157,7 @@
 <script type="text/javascript" src="jquery2.1.4.min.js"></script>
 <script type="text/javascript" src="jqueryrotate.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script type="text/javascript" src="site.js"></script>
 <script type="text/javascript" src="validation.js"></script>
+<script type="text/javascript" src="site.js"></script>
+
 </html>
